# octez-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CI_OPTIMIZATIONS.md  CI_OPTIMIZATION_FINAL_REPORT.md  CONTRIBUTING.md  COVERAGE_NEXT_STEPS.md  COVERAGE_PRIORITIES.md  Dockerfile.ci  Dockerfile.ci-debian  GARDENING.md  Makefile  README.md  SESSION_FINAL_REPORT.md  SESSION_SUMMARY.md  TESTING_CHECKLIST.md  TESTING_ROADMAP.md  TEST_SERVICE_README.md  bisect467406259.coverage  bisect483435160.coverage  bisect691401371.coverage  bisect792195046.coverage  bisect832003408.coverage  cleanup-test-service.sh  create-test-service.sh  dune-project  install.sh  octez-manager.opam
src/: base_dir_registry.ml  base_dir_registry.mli  binary_downloader.ml  binary_downloader.mli  binary_registry.ml  binary_registry.mli  capabilities.ml  common.ml  common.mli  directory_registry.ml  directory_registry.mli  dune  env_file_parser.ml  env_file_parser.mli  execstart_parser.ml  execstart_parser.mli  external_service.ml  external_service.mli  external_service_detector.ml  external_service_detector.mli  help_parser.ml  history_mode.ml  history_mode.mli  installer.ml  installer.mli  installer_types.ml  keys_reader.ml  keys_reader.mli  log_export.ml  log_export.mli  log_viewer.ml  log_viewer.mli  logging_mode.ml  logging_mode.mli  main.ml  manager_interfaces.ml  node_env.ml  node_env.mli  port_validation.ml  port_validation.mli  (+21 more)
src/cli/: cli_helpers.ml  cli_helpers.mli  cli_output.ml  cli_output.mli  cli_progress.ml  cli_progress.mli  cmd_binaries.ml  cmd_external.ml  cmd_external.mli  cmd_import.ml  cmd_install_accuser.ml  cmd_install_accuser.mli  cmd_install_baker.ml  cmd_install_baker.mli  cmd_install_dal.ml  cmd_install_dal.mli  cmd_install_node.ml  cmd_install_node.mli  cmd_instance.ml  cmd_instance.mli  cmd_self_update.ml  cmd_utils.ml  cmd_utils.mli  dune
src/installer/: accuser.ml  accuser.mli  baker.ml  baker.mli  config.ml  config.mli  dal_node.ml  dal_node.mli  helpers.ml  helpers.mli  import.ml  import.mli  import_cascade.ml  import_cascade.mli  lifecycle.ml  lifecycle.mli  node.ml  node.mli  removal.ml  removal.mli  snapshot.ml  snapshot.mli
src/ui/: background_runner.ml  baker_highwatermarks.ml  baker_highwatermarks.mli  binary_help_explorer.ml  cache.ml  cache.mli  context.ml  context.mli  dal_health.ml  dal_health.mli  data.ml  data.mli  delegate_data.ml  delegate_data.mli  delegate_scheduler.ml  delegate_scheduler.mli  dune  external_services_scheduler.ml  external_services_scheduler.mli  flows.ml  form_builder.ml  form_builder.mli  form_builder_bundles.ml  form_builder_bundles.mli  form_builder_common.ml  form_builder_common.mli  global_shortcuts.ml  global_shortcuts.mli  install_progress_modal.ml  install_progress_modal.mli  job_manager.ml  metrics.ml  metrics.mli  modal_helpers.ml  modal_helpers.mli  monitored_page.ml  monitored_page.mli  rpc_client.ml  rpc_metrics.ml  rpc_metrics.mli  (+11 more)
src/ui/pages/: binaries.ml  dashboard.ml  dashboard.mli  diagnostics.ml  import_wizard.ml  install_accuser_form.ml  install_accuser_form_v2.ml  install_accuser_form_v2.mli  install_accuser_form_v3.ml  install_accuser_form_v3.mli  install_baker_form.ml  install_baker_form_v2.ml  install_baker_form_v2.mli  install_baker_form_v3.ml  install_dal_form.ml  install_dal_node_form_v3.ml  install_dal_node_form_v3.mli  install_node_form.ml  install_node_form_v2.ml  install_node_form_v2.mli  install_node_form_v3.ml  install_signer_form_v3.ml  installers.ml  instance_details.ml  instances.ml  instances.mli  jobs_page.ml  log_viewer_page.ml  log_viewer_page.mli  manager_app.ml  manager_app.mli  networks_page.ml  settings_page.ml  signers_page.ml  snapshots.ml  snapshots_page.ml
src/ui/pages/binaries/: binaries_page.ml
src/ui/pages/diagnostics/: charts.ml  diagnostics_page.ml  metrics_recorder.ml  metrics_recorder.mli
src/ui/pages/instances/: instances_actions.ml  instances_actions.mli  instances_layout.ml  instances_layout.mli  instances_render.ml  instances_render.mli  instances_state.ml  instances_state.mli
test/: bisect197062277.coverage  bisect935276705.coverage  deterministic_mocks.ml  directory_registry_tests.ml  dune  mock_service_helpers.ml  run-with-coverage.sh  test_binaries_page.ml  test_binary_downloader_extended.ml  test_binary_registry.ml  test_cache_invalidation.ml  test_cli_progress.ml  test_common_extended.ml  test_common_utils.ml  test_data.ml  test_diagnostics_page.ml  test_directory_registry.ml  test_execstart_parser.ml  test_external_detector2.ml  test_external_service_extended.ml  test_form_builder.ml  test_form_builder_bundles.ml  test_golden_path_tui_v2.ml  test_help_parser.ml  test_import_cascade.ml  test_import_fields.ml  test_install_accuser_form.ml  test_install_baker_form.ml  test_install_dal_node_form.ml  test_install_node_form.ml  test_installer_snapshot.ml  test_instance_actions.ml  test_instances_page.ml  test_instances_render.ml  test_keys_reader.ml  test_modal_interactions.ml  test_node_env.ml  test_port_validation.ml  test_process_scanner.ml  test_registries.ml  (+21 more)
test/integration/: README.md  build-static.sh  docker-compose.coverage.yml  docker-compose.yml  run.sh
test/integration/cli-tester/: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.coverage  mock-systemctl.sh  run-tests.sh
test/integration/cli-tester/tests/: SHARDING.md  lib.sh  shards.json
test/integration/cli-tester/tests/accuser/: 35-accuser-basic-install.sh  36-accuser-start-stop.sh  37-accuser-extra-args.sh  38-accuser-show-service.sh  (+1 more)
test/integration/sandbox/: Dockerfile  entrypoint.sh  serve.py  teztnets.json
test/mocks/: dune  mock_systemd.ml  mock_systemd.mli
test/scripts/: README.md  cleanup-unmanaged-services.sh  create-unmanaged-services.sh
test/ui_regressions/: accuser_enable_service_focus.screen  baker_protocol_focus.screen  dal_rpc_addr_focus.screen  install_node_empty.screen  install_node_network_dropdown.screen  minimal_screen.screen  node_history_mode_archive.screen  node_instance_name_numbers.screen  node_p2p_addr_focus.screen  node_rpc_addr_custom.screen  node_snapshot_disabled.screen
(+119 files in other folders)
