(library
 (name octez_manager_lib)
 (public_name octez-manager.lib)
 (modules
  common
  history_mode
  system_user
  logging_mode
  log_viewer
  node_env
  systemd
  service
  service_registry
  base_dir_registry
  directory_registry
  help_parser
  keys_reader
  installer
  teztnets
  snapshots
  settings
  service_backend
  installer_types
  manager_interfaces
  capabilities)
 (libraries
  rresult
  yojson
  bos
  cohttp-eio
  tls-eio
  tls
  ca-certs
  domain-name
  mirage-crypto-rng.unix
  uri
  eio_main
  eio
  miaou-core.lib)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name main)
 (public_name octez-manager)
 (modules main)
 (libraries
  octez_manager_lib
  octez-manager.ui
  cmdliner
  rresult
  yojson
  linenoise)
 (ocamlopt_flags
  (:standard
   (:include %{project_root}/static_flags.sexp)))
 (instrumentation
  (backend bisect_ppx)))
