(include_subdirs unqualified)

(library
 (name octez_manager_lib)
 (public_name octez-manager.lib)
 (modules
  common
  history_mode
  system_user
  logging_mode
  log_viewer
  log_export
  node_env
  systemd
  binary_registry
  service
  service_registry
  base_dir_registry
  directory_registry
  help_parser
  keys_reader
  installer
  helpers
  snapshot
  config
  node
  dal_node
  baker
  accuser
  lifecycle
  removal
  import
  import_cascade
  teztnets
  snapshots
  settings
  service_backend
  installer_types
  manager_interfaces
  capabilities
  port_validation
  external_service
  execstart_parser
  env_file_parser
  process_scanner
  external_service_detector)
 (libraries
  rresult
  yojson
  bos
  str
  unix
  cohttp-eio
  tls-eio
  tls
  ca-certs
  domain-name
  mirage-crypto-rng.unix
  uri
  eio_main
  eio_posix
  eio
  miaou-core.lib)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name main)
 (public_name octez-manager)
 (modules main)
 (libraries
  octez_manager_lib
  octez_manager_cli
  octez-manager.ui
  cmdliner
  rresult
  yojson
  linenoise)
 (ocamlopt_flags
  (:standard
   (:include %{project_root}/static_flags.sexp)))
 (instrumentation
  (backend bisect_ppx)))
