(test
 (name unit_tests)
 (libraries alcotest octez_manager_lib octez-manager.ui)
 (modules unit_tests)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_registries)
 (libraries alcotest octez_manager_lib)
 (modules test_registries)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_cli_progress)
 (libraries alcotest octez_manager_cli)
 (modules test_cli_progress)
 (instrumentation
  (backend bisect_ppx)))

; TUI tests are skipped in CI (headless driver hangs in container)
; Run locally with: dune exec test/tui_flow_tests.exe

(executable
 (name tui_flow_tests)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term)
 (modules tui_flow_tests tui_test_helpers)
 (instrumentation
  (backend bisect_ppx)))
