(test
 (name unit_tests)
 (libraries alcotest octez_manager_lib octez-manager.ui)
 (modules unit_tests)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_registries)
 (libraries alcotest octez_manager_lib)
 (modules test_registries)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_cli_progress)
 (libraries alcotest octez_manager_cli)
 (modules test_cli_progress)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_system_metrics_scheduler)
 (libraries alcotest octez-manager.ui miaou-core.widgets.display)
 (modules test_system_metrics_scheduler)
 (instrumentation
  (backend bisect_ppx)))

; TUI tests are skipped in CI (headless driver hangs in container)
; Run locally with: dune exec test/tui_flow_tests.exe

; Shared TUI test helpers library

(library
 (name tui_test_helpers_lib)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term)
 (modules tui_test_helpers)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name tui_flow_tests)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules tui_flow_tests)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_node_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_node_form)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_baker_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_baker_form)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_accuser_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_accuser_form)
 (instrumentation
  (backend bisect_ppx)))
