(test
 (name unit_tests)
 (libraries alcotest octez_manager_lib octez-manager.ui)
 (modules unit_tests)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_registries)
 (libraries alcotest octez_manager_lib)
 (modules test_registries)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_cli_progress)
 (libraries alcotest octez_manager_cli)
 (modules test_cli_progress)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_system_metrics_scheduler)
 (libraries alcotest octez-manager.ui miaou-core.widgets.display)
 (modules test_system_metrics_scheduler)
 (instrumentation
  (backend bisect_ppx)))

; TUI tests are skipped in CI (headless driver hangs in container)
; Run locally with: dune exec test/tui_flow_tests.exe

; Shared TUI test helpers library

(library
 (name tui_test_helpers_lib)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term)
 (modules tui_test_helpers)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name tui_flow_tests)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules tui_flow_tests)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_node_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_node_form)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_baker_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_baker_form)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_accuser_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_accuser_form)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_install_dal_node_form)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_install_dal_node_form)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_modal_interactions)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_modal_interactions)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_instances_page)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_instances_page)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_golden_path_tui_v2)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  miaou-core.helpers
  lambda-term
  tui_test_helpers_lib
  tui_command_runner_lib
  ui_regression_framework_lib
  eio_main)
 (modules test_golden_path_tui_v2)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_instance_actions)
 (libraries alcotest test_mocks unix)
 (modules test_instance_actions)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_node_env)
 (libraries alcotest octez_manager_lib unix)
 (modules test_node_env)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_port_validation)
 (libraries alcotest octez_manager_lib)
 (modules test_port_validation)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_execstart_parser)
 (libraries alcotest octez_manager_lib)
 (modules test_execstart_parser)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_system_user)
 (libraries alcotest octez_manager_lib)
 (modules test_system_user)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_snapshots)
 (libraries alcotest octez_manager_lib)
 (modules test_snapshots)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_version_checker)
 (libraries alcotest octez_manager_lib)
 (modules test_version_checker)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_common_utils)
 (libraries alcotest octez_manager_lib)
 (modules test_common_utils)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_teztnets)
 (libraries alcotest octez_manager_lib)
 (modules test_teztnets)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_common_extended)
 (libraries alcotest octez_manager_lib unix)
 (modules test_common_extended)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_binary_downloader_extended)
 (libraries alcotest octez_manager_lib yojson)
 (modules test_binary_downloader_extended)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_systemd_extended)
 (libraries alcotest octez_manager_lib)
 (modules test_systemd_extended)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_external_service_extended)
 (libraries alcotest octez_manager_lib)
 (modules test_external_service_extended)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_simple_modules)
 (libraries alcotest octez_manager_lib yojson)
 (modules test_simple_modules)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_keys_reader)
 (libraries alcotest octez_manager_lib yojson)
 (modules test_keys_reader)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_binary_registry)
 (libraries alcotest octez_manager_lib yojson)
 (modules test_binary_registry)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_directory_registry)
 (libraries alcotest octez_manager_lib yojson)
 (modules test_directory_registry)
 (instrumentation
  (backend bisect_ppx)))

; UI Regression Testing Framework

(library
 (name ui_regression_framework_lib)
 (libraries
  miaou-core.lib_miaou_internal
  miaou-core.lib
  octez_manager_lib
  unix
  str)
 (modules ui_regression_framework deterministic_mocks))

; TUI Command Runner - Declarative test framework

(library
 (name tui_command_runner_lib)
 (libraries
  miaou-core.lib_miaou_internal
  miaou-core.lib
  ui_regression_framework_lib
  octez_manager_lib
  str
  unix)
 (modules tui_command_runner))

; UI Regression tests run in CI (deterministic and don't hang)

(test
 (name test_ui_regressions_minimal)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib
  ui_regression_framework_lib)
 (modules test_ui_regressions_minimal)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_ui_regressions_forms)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib
  ui_regression_framework_lib)
 (modules test_ui_regressions_forms)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_ui_regressions_forms_comprehensive)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib
  ui_regression_framework_lib)
 (modules test_ui_regressions_forms_comprehensive)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_help_parser)
 (libraries alcotest octez_manager_lib)
 (modules test_help_parser)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_form_builder)
 (libraries alcotest octez-manager.ui)
 (modules test_form_builder)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_form_builder_bundles)
 (libraries alcotest octez-manager.ui)
 (modules test_form_builder_bundles)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name mock_service_helpers_lib)
 (libraries octez_manager_lib octez-manager.ui)
 (modules mock_service_helpers))

(test
 (name test_instances_render)
 (libraries alcotest octez-manager.ui mock_service_helpers_lib)
 (modules test_instances_render)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_installer_snapshot)
 (libraries alcotest octez_manager_lib)
 (modules test_installer_snapshot)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_self_update_checker)
 (libraries alcotest octez_manager_lib str)
 (modules test_self_update_checker)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_binaries_page)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_binaries_page)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_diagnostics_page)
 (libraries
  alcotest
  octez_manager_lib
  octez-manager.ui
  miaou-core.lib
  miaou-core.lib_miaou_internal
  lambda-term
  tui_test_helpers_lib)
 (modules test_diagnostics_page)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_import_cascade)
 (libraries alcotest octez_manager_lib)
 (modules test_import_cascade)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_process_scanner)
 (libraries alcotest octez_manager_lib str)
 (modules test_process_scanner)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_self_update_checker2)
 (libraries alcotest octez_manager_lib)
 (modules test_self_update_checker2)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_system_metrics)
 (libraries alcotest octez-manager.ui str)
 (modules test_system_metrics)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_import_fields)
 (libraries alcotest octez_manager_lib)
 (modules test_import_fields)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_systemd_templates)
 (libraries alcotest octez_manager_lib)
 (modules test_systemd_templates)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_settings2)
 (libraries alcotest octez_manager_lib yojson)
 (modules test_settings2)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_data)
 (libraries alcotest octez_manager_lib octez-manager.ui str)
 (modules test_data)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_external_detector2)
 (libraries alcotest octez_manager_lib)
 (modules test_external_detector2)
 (instrumentation
  (backend bisect_ppx)))
