(include_subdirs no)

(library
 (name octez_manager_cli)
 (wrapped false)
 (modules
  cli_output
  cli_helpers
  cmd_install_accuser
  cmd_install_baker
  cmd_install_dal
  cmd_install_node
  cmd_instance)
 (libraries octez_manager_lib cmdliner rresult yojson linenoise)
 (instrumentation
  (backend bisect_ppx)))
