(include_subdirs unqualified)

(library
 (name octez_manager_ui)
 (public_name octez-manager.ui)
 (libraries
  octez_manager_lib
  miaou-core.lib
  miaou-core.internals
  miaou-core.widgets.display
  miaou-runner.tui
  lambda-term
  eio
  eio_main
  eio_posix)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))
